# ChangeLog for dev-libs/lzo
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/lzo/ChangeLog,v 1.56 2011/03/22 20:41:40 ranger Exp $

  22 Mar 2011; Brent Baude <ranger@gentoo.org> lzo-2.04.ebuild:
  Marking lzo-2.04 ppc for bug 353842

  21 Feb 2011; Jeroen Roovers <jer@gentoo.org> lzo-2.04.ebuild:
  Stable for HPPA (bug #353842).

  13 Feb 2011; Raúl Porcel <armin76@gentoo.org> lzo-2.04.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #353842

  11 Feb 2011; Markos Chandras <hwoarang@gentoo.org> lzo-2.04.ebuild:
  Stable on amd64 wrt bug #353842

  08 Feb 2011; Thomas Kahle <tomka@gentoo.org> lzo-2.04.ebuild:
  x86 stable per bug 353842

  06 Feb 2011; Mart Raudsepp <leio@gentoo.org> lzo-2.02-r1.ebuild:
  Drop to ~mips

*lzo-2.04 (01 Dec 2010)

  01 Dec 2010; Samuli Suominen <ssuominen@gentoo.org> +lzo-2.04.ebuild:
  Version bump.

  18 Jul 2010; Daniel Black <dragonheart@gentoo.org> -lzo-1.08-r1.ebuild:
  clean out old stuff

*lzo-2.03 (18 Jun 2008)

  18 Jun 2008; Daniel Black <dragonheart@gentoo.org> +lzo-2.03.ebuild:
  version bump as per bug #227769 thanks Sergiy Borodych

  12 Feb 2008; Diego Pettenò <flameeyes@gentoo.org> lzo-2.02-r1.ebuild:
  Run elibtoolize.

  01 Mar 2007; Daniel Black <dragonheart@gentoo.org> lzo-2.02-r1.ebuild:
  nasm dependency dropped as per bug #168922 thanks to Harald van Dijk

  16 Jan 2007; Fabian Groffen <grobian@gentoo.org> lzo-1.08-r1.ebuild,
  lzo-2.02-r1.ebuild:
  Dropped ppc-macos keyword, see you in prefix.

  07 Jan 2007; Daniel Black <dragonheart@gentoo.org> lzo-1.08-r1.ebuild:
  [e]autotools correction as per bug #160159 thanks Diego

  05 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> lzo-1.08-r1.ebuild:
  Remove gnuconfig_update usage, leave it to econf.

  09 Nov 2006; Ilya A. Volynets-Evenbakh <iluxa@gentoo.org>
  lzo-2.02-r1.ebuild:
  Stable on mips

  17 Oct 2006; Roy Marples <uberlord@gentoo.org> lzo-2.02-r1.ebuild: