@@ -1,9 +1,25 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX lzo-2.02-exec-stack.patch 734 RMD160 7829cff33854c8a64a234fed877c48b8bb623484 SHA1 9415301733b46b174faffd4814b4f18972dfd7f1 SHA256 1343ae6699542019b33bfb4a7eba3f8721bd09f6cfe3111b14a75c9b54d8ccbb
-DIST lzo-2.02.tar.gz 599387 RMD160 382154ec7d076e66fdcb6114818193dca180e3ac SHA1 82e1ae75663623516156542f4975a64d3a264b91 SHA256 a2fbecb4dd7c1dab498e3d8b5a0e574e6b8be09c63329b0d29c6fa9adb4a2fc5
-DIST lzo-2.03.tar.gz 626042 RMD160 1c2eb11ba2babd81236128b7fef3676c9db7da51 SHA1 135a50699296e853362a3d11b9f872c74c8b8c5a SHA256 8b1b0da8f757b9ac318e1c15a0eac8bdb56ca902a2dd25beda06c0f265f22591
 DIST lzo-2.04.tar.gz 604424 RMD160 8fcfcd45144d63db397ef1e8b1bd5140e456fdaf SHA1 f5bf5c7ae4116e60513e5788d156ef78946677e7 SHA256 4ee3a040facf39561f13e4ef2ab99a886fd68251a35d612486ed0625cc6ab428
-EBUILD lzo-2.02-r1.ebuild 954 RMD160 a6015811b1e6bacf7c9315699711b65ba80762d7 SHA1 3d124e80bd72082686b84856b4400a3d0e569fda SHA256 fcbe6fcf37c701f75a1fb709c3c1488a845debcfac23f222cfe6166214570f61
-EBUILD lzo-2.03.ebuild 845 RMD160 0277b39ed15f690ae582aafcae252819177d86ae SHA1 fa30b9d0dfb75df927fc8dec75566b494cf2b11a SHA256 75d46f2e8cef67fd2857ce4c606fb404dab39a0b2492af2cda85a6e9d4481d95
-EBUILD lzo-2.04.ebuild 913 RMD160 142d688b3ee24899dc098afb212348bdeae42909 SHA1 5450363c364ebedfb91709473f0de0c07b48b353 SHA256 b2eeb1a9416062e423d3d8d2e37ba05341b497f55d8808bf49c02d433f5a94a3
-MISC ChangeLog 6127 RMD160 a0f45322db6b9572ca9470d2c33275f8b7c21165 SHA1 30bfca3c445f1cec288a6cfde254adff2fd7a2f2 SHA256 f0f23cd737aae50a6dc5fa6dfa67be7e1e49959e02f713ed6d8e12cda49429aa
+EBUILD lzo-2.04.ebuild 924 RMD160 5c5929832ab21296c202e10d93c92c4dee458e6e SHA1 89df7089c12a1908c9abdc90eb8415a0d90296c2 SHA256 47758b42450a71a9d4c0e5080a51cb42a00a536735e591fe6aa739f7cc10488e
+MISC ChangeLog 6336 RMD160 11ffe23e369efd5a4f2e116fd7c52ad1f03c0d70 SHA1 a22bf1be4974a688f572213b8736f6de483f0d98 SHA256 02b49ef1285067bbd9f88b740998f328d15b52566cca893ed25188ad51827be9
 MISC metadata.xml 295 RMD160 c3fe4bdd973f1354cc7956e35f6947e5e33da29e SHA1 072a94e2ee7e3e2473a2a7fea5f0e539a26d185f SHA256 22070f0c10318b4441106d6fb0e6236ba8f9d7ee87b2d95cade264150e66d9e5
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.14 (GNU/Linux)
+
+iQIcBAEBCAAGBQJNisVvAAoJEHQ6UuhrqBBQ7UUP/ivNTJfa15vWAsp3rxfqpZJo
+IMd2FM5UZYmdGYp5wCivH4eqHWXGwxxOCGQmgIt4Bs7fH7d9KXrfxEhxpXUuIlhQ
+zfkvRSxzuL/bsWmHDMUhi/FvueToZkp5WtOCq/e4/q5j0PLcDoBhY1xd7S2AnEzB
+eey5xi3CPLo5umvKMoBiQigeBnvsgL2MW7FypZIA9WGS5Uoy2qPu+En3c5YGj/VF
+43HGjU86CAODsrVl8ymGbSsHk/ieLA7hotN5xa5vqRAeVEnmIifR7NEex7WkzvqZ
+HX7VLQsPzracF0ZStboUp5TtKYNiBI+lwfi9d+mzY3JhYgQrafHi9SoOqKtuwBTK
+xiWEoEhvSfeuxP3Vi+6u5+K5/PWMl2FLyOZE5seHrCzPIYutZWs0VhvdTUqb9nrx
+O5sT9NVpMeSypdEa6e7BuG21Fz7oPKCuDOgR0n0CaUoEpO4bkEts1XgHwAiio4Ia
+jHv9eFfto/yzi2guF8QYZoYwHDJ0VaF18SxIj9g9BLaMVDv9cf4I22ss+x3Kc2Vg
+FGgopFjaNuUFZGgkG7pG+/Ibi5Xt7/f3hgvtkfOoL2U3Q+KWQqiNM0/+8QDl1un9
+Q9NTygcVa7pVotvYQ2uksMBsBX6oVL8weD7qnx+e1FNsyxzFdIWd72okyo63SP5r
+HgrmbFyp9aZUbiAgMW9R
+=5B86
+-----END PGP SIGNATURE-----
