@@ -1,39 +1,0 @@
-# Copyright 1999-2011 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/lzo/lzo-2.02-r1.ebuild,v 1.19 2011/02/06 12:39:35 leio Exp $
-
-inherit eutils libtool
-
-DESCRIPTION="An extremely fast compression and decompression library"
-HOMEPAGE="http://www.oberhumer.com/opensource/lzo/"
-SRC_URI="http://www.oberhumer.com/opensource/lzo/download/${P}.tar.gz"
-
-LICENSE="GPL-2"
-SLOT="2"
-KEYWORDS="alpha amd64 arm hppa ia64 m68k ~mips ppc ppc64 s390 sh sparc x86 ~sparc-fbsd ~x86-fbsd"
-IUSE="examples"
-
-DEPEND=""
-RDEPEND=""
-
-src_unpack() {
-	unpack ${A}
-	cd "${S}"
-	epatch "${FILESDIR}"/${P}-exec-stack.patch
-
-	elibtoolize
-}
-
-src_compile() {
-	econf --enable-shared || die
-	emake || die
-}
-
-src_install() {
-	make DESTDIR="${D}" install || die
-	dodoc AUTHORS BUGS ChangeLog NEWS README THANKS doc/LZO*
-	if use examples ; then
-		docinto examples
-		dodoc examples/*.c examples/Makefile
-	fi
-}
