@@ -1,29 +1,0 @@
-# Copyright 1999-2008 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/lzo/lzo-2.03.ebuild,v 1.1 2008/06/18 08:21:09 dragonheart Exp $
-
-DESCRIPTION="An extremely fast compression and decompression library"
-HOMEPAGE="http://www.oberhumer.com/opensource/lzo/"
-SRC_URI="http://www.oberhumer.com/opensource/lzo/download/${P}.tar.gz"
-
-LICENSE="GPL-2"
-SLOT="2"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~sparc-fbsd ~x86 ~x86-fbsd"
-IUSE="examples"
-
-DEPEND=""
-RDEPEND=""
-
-src_compile() {
-	econf --enable-shared || die
-	emake || die
-}
-
-src_install() {
-	make DESTDIR="${D}" install || die
-	dodoc AUTHORS BUGS ChangeLog NEWS README THANKS doc/LZO*
-	if use examples ; then
-		docinto examples
-		dodoc examples/*.c examples/Makefile
-	fi
-}
